--- a/backend/ChatAPI/Dockerfile
+++ b/backend/ChatAPI/Dockerfile
@@ -1,8 +1,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
+COPY *.csproj .
+RUN dotnet restore
 COPY . .
-RUN dotnet restore ChatAPI.csproj
-RUN dotnet publish ChatAPI.csproj -c Release -o /app
+RUN dotnet publish -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
