--- a/backend/ChatAPI/Dockerfile
+++ b/backend/ChatAPI/Dockerfile
@@ -1,8 +1,17 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY *.csproj .
-RUN dotnet restore
+
+# Debug: Hangi dosyalar var?
+RUN pwd
+RUN ls -la
+
+# Debug: .csproj dosyasını kontrol et
 COPY . .
+RUN ls -la
+RUN find . -name "*.csproj"
+
+# Sonra build işlemi
+RUN dotnet restore
 RUN dotnet publish -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
