--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -1,5 +1,8 @@
-flask==2.3.3
-transformers==4.35.2
-torch==2.1.1
-gradio==4.8.0
-requests==2.31.0
+transformers>=4.30.0
+torch>=2.0.0
+gradio>=3.35.0
+flask>=2.3.0
+requests>=2.28.0
+accelerate>=0.20.0
+sentencepiece>=0.1.97
+protobuf>=3.20.0
